test/files/neg/t9847.check
t9847.scala:10: warning: Line starts with an operator that in future
will be taken as an infix expression continued from the previous line.
To force the previous interpretation as a separate statement,
add an explicit `;`, add an empty line, or remove spaces after the operator.
  + 1
  ^
t9847.scala:14: warning: Line starts with an operator that in future
will be taken as an infix expression continued from the previous line.
To force the previous interpretation as a separate statement,
add an explicit `;`, add an empty line, or remove spaces after the operator.
  + 1
  ^
t9847.scala:6: warning: discarded non-Unit value
  def f(): Unit = 42
                  ^
t9847.scala:6: warning: a pure expression does nothing in statement position
  def f(): Unit = 42
                  ^
t9847.scala:9: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1
    ^
t9847.scala:14: warning: discarded non-Unit value
  + 1
  ^
t9847.scala:14: warning: a pure expression does nothing in statement position
  + 1
  ^
t9847.scala:13: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1
    ^
t9847.scala:14: warning: multiline expressions might require enclosing parentheses; a value can be silently discarded when Unit is expected
  + 1
  ^
t9847.scala:18: warning: discarded non-Unit value
    x + 1
      ^
t9847.scala:21: warning: discarded non-Unit value
  def j(): Unit = x + 1
                    ^
t9847.scala:23: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
  class C { 42 }
            ^
t9847.scala:24: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
  class D { 42 ; 17 }
            ^
t9847.scala:24: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
  class D { 42 ; 17 }
                 ^
14 warnings
error: No warnings can be incurred under -Werror.
